arkts_static_test/05_Generics/ets_cases/5.1.1_Type_Parameter_Constraint/compile-fail/GEN_05_01_01_106_FAIL_NO_CONSTRAINT_T_NOT_OBJECT.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id GEN_05_01_01_106_FAIL_NO_CONSTRAINT_T_NOT_OBJECT
 * @expect compile-fail
 * @section 5.1.1
 * @design 无约束T默认extends Any，不兼容Object
 * @note spec: no constraint => extends Any, not compatible with Object
 */
class G106<T> { g: T
  foo(): void { let x: Object = this.g }
}